--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,11 +27,14 @@ nav{
 	float: right;
 	display: inline;
 }
+.container {
+	padding: 15px;
+}
 .articulo{
 	margin-top: 2%;
 	margin-right: 1%;
 	margin-left: 1%;
-	float: right;
+	float: left;
 	width: 31%;
 	height: 200px;
 }
@@ -40,6 +43,9 @@ nav{
 	height: 70%;
 	margin: 0 auto;
 	background: #191919;
+}
+.img-ilustrativo {
+	object-fit: cover;
 }
 .descripcion{
 	text-align: center;
