--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,13 @@
 body{
 	background-color: #2A2A2A;
-
+	margin: 0;
 }
 nav{
 	overflow: hidden;
 }
 .nav{
+	display: flex;
+	justify-content: space-between;
 	background-color: rgba(0,0,0,0);
 
 }
@@ -24,11 +26,19 @@ nav{
 }
 .nav ul{
 	width: 30%;
-	float: right;
-	display: inline;
+	/* font-size: 20px; */
+}
+.nav a {
+	text-decoration: none;
+	color: white;
+}
+.img-logo {
+	width: 80px;
+	height: 50px;
 }
 .container {
 	padding: 15px;
+	height: 460px;
 }
 .articulo{
 	margin-top: 2%;
@@ -38,14 +48,26 @@ nav{
 	width: 31%;
 	height: 200px;
 }
+
 .ilustrativo{
 	width: 80%;
 	height: 70%;
 	margin: 0 auto;
-	background: #191919;
+	background: #2A2A2A;
 }
 .img-ilustrativo {
 	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 25px;
+	/* border: 1px solid #00FF70; */
+	filter:brightness(0.7)
+}
+ .img-ilustrativo:hover{
+	width: 120%;
+	height: 120%;
+	filter:brightness(1)
+	
 }
 .descripcion{
 	text-align: center;
@@ -53,4 +75,62 @@ nav{
 	color: white;
 	border: 2px solid #00d285;
 	border-width: 0px 0px 2px 0px;
+	padding-top: 10px;
 }
+.contac {
+	margin: 10px 0 ;
+	width: 100%;
+	height: 150px;
+	background-color: #056fff;
+	
+} 
+.form-email {
+	padding: 15px 0 15px 25px;
+	font-size: 20px;
+	color: white;
+	
+}
+.form-email h3{
+	font-size: 30px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+.form-email input{
+	/* display: block; */
+    border-color:gray;
+    /* margin: 10px; */
+    /* background: transparent; */
+    color: white;
+    padding: 10px;
+    border-radius: 15px;
+    width: 100px;
+	margin-top: 10px;
+	
+}
+.form-email button{
+	/* display: block; */
+    border-color:gray;
+    margin: 10px;
+    background: transparent;
+    color: white;
+    padding: 10px 0;
+    border-radius: 15px;
+    width: 100px;
+    margin-top: 10px
+}
+
+@media screen and (max-width: 1023px) {
+
+} 
+@media screen and (max-width: 767px) {
+.nav ul {
+	display: flex;	
+	justify-content: space-between;
+	width: 300px;
+	padding: 0;
+}
+}
+@media screen and (max-width: 480px) {
+
+}
+
